[gd_scene load_steps=2 format=3 uid="uid://b3tq7nhujaby"]

[ext_resource type="Script" path="res://scripts/NewGameBasicMenu.gd" id="1_i18yl"]

[node name="newGameBasicMenu" type="Control" node_paths=PackedStringArray("densities", "sizes")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 600.0
offset_bottom = 1024.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i18yl")
densities = [NodePath("5p"), NodePath("10p"), NodePath("15p")]
sizes = [NodePath("sm"), NodePath("me"), NodePath("la")]

[node name="5p" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.4
anchor_right = 0.35
anchor_bottom = 0.5
toggle_mode = true
text = "5%"

[node name="10p" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35
anchor_top = 0.4
anchor_right = 0.65
anchor_bottom = 0.5
toggle_mode = true
text = "10%"

[node name="15p" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.65
anchor_top = 0.4
anchor_right = 0.95
anchor_bottom = 0.5
toggle_mode = true
text = "15%"

[node name="sm" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.55
anchor_right = 0.35
anchor_bottom = 0.65
toggle_mode = true
text = "small"

[node name="me" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35
anchor_top = 0.55
anchor_right = 0.65
anchor_bottom = 0.65
toggle_mode = true
text = "med"

[node name="la" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.65
anchor_top = 0.55
anchor_right = 0.95
anchor_bottom = 0.65
toggle_mode = true
text = "large"

[node name="back" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.7
anchor_right = 0.5
anchor_bottom = 0.8
text = "back"

[node name="custom" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.7
anchor_right = 0.8
anchor_bottom = 0.8
text = "custom"

[node name="play" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.8
anchor_right = 0.8
anchor_bottom = 0.9
text = "play"

[connection signal="toggled" from="5p" to="." method="_change_density" binds= [0]]
[connection signal="toggled" from="10p" to="." method="_change_density" binds= [1]]
[connection signal="toggled" from="15p" to="." method="_change_density" binds= [2]]
[connection signal="toggled" from="sm" to="." method="_change_size" binds= [0]]
[connection signal="toggled" from="me" to="." method="_change_size" binds= [1]]
[connection signal="toggled" from="la" to="." method="_change_size" binds= [2]]
[connection signal="pressed" from="back" to="." method="back_button_pressed"]
[connection signal="pressed" from="custom" to="." method="custom_button_pressed"]
[connection signal="pressed" from="play" to="." method="_new_game_basic"]
